fix: preload logo is too large for PC end. Make a responsive style chage to fit all ends.

--- a/css/style-responsive.css
+++ b/css/style-responsive.css
@@ -14,6 +14,9 @@
   display:none;
 }
 
+  #preload-logo{
+    width:19vw;
+  }
 .menu-media{
   display:block;
 }
@@ -130,6 +133,9 @@ textarea{
 
 /* iPad (portrait) */
 @media (min-width: 580px) and (max-width: 767px) {
+ #preload-logo{
+   width: 15vw;
+ }
 
 .menu{
   display:none;
