--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 }
 
 #preload-logo{
-  width: 19vw;
+  width: 12vw;
   height: auto;
   margin-top: 32.7vh;
 }
